downgrade yiws.io uploads to v1
testing to see if v1 is better about not destroying directory structure

--- a/.travis.yml
+++ b/.travis.yml
@@ -27,8 +27,7 @@ deploy:
     on:
       repo: yiwensong/yiws_io
   - provider: gcs
-    cleanup: false
-    edge: true
+    skip_cleanup: true
     bucket: 'yiws.io'
     acl: public-read
     local-dir: build/web
