Revert "downgrade yiws.io uploads to v1"
This reverts commit 4eafdc57b5421d63cfeb6ece9fb40d31dc86846c.

--- a/.travis.yml
+++ b/.travis.yml
@@ -27,7 +27,8 @@ deploy:
     on:
       repo: yiwensong/yiws_io
   - provider: gcs
-    skip_cleanup: true
+    cleanup: false
+    edge: true
     bucket: 'yiws.io'
     acl: public-read
     local-dir: build/web
